--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "jsreport": "2.2.0",
     "forever": "~0.11.0"
+  },
+  "devDependencies": {
+    "puppeteer": "^1.8.0"
   }
 }
